--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,3 +3,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+body {
+  background-color: #343243;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+}
