--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,9 +5,12 @@
 .sidebar {
   flex-grow: 1;
   flex-basis: 0;
+  min-width: 475px;
+  overflow-y: auto;
+  max-height: 100vh;
 }
 
 .map {
-  flex-grow: 2;
+  flex-grow: 2.5;
   flex-basis: 0;
 }
