--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,9 @@
 }
 
 body {
-  background-color: #343243;
+  background-color: #33364b;
   color: white;
   font-family: 'Open Sans', sans-serif;
 }
+
+/* #343243 */
