--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,7 +5,8 @@
 .sidebar {
   flex-grow: 1;
   flex-basis: 0;
-  min-width: 475px;
+  min-width: 500px;
+  max-width: 600px;
   overflow-y: auto;
   max-height: 100vh;
 }
