--- a/src/styles/location.css
+++ b/src/styles/location.css
@@ -3,6 +3,9 @@
   background-color: #555972;
   height: 100px;
   border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .location-container {
