--- a/src/styles/mapLeaflet.css
+++ b/src/styles/mapLeaflet.css
@@ -2,3 +2,11 @@
   width: 100%;
   height: 100vh;
 }
+
+.leaflet-popup-close-button {
+  display: none;
+}
+
+.leaflet-popup-content-wrapper {
+  text-align: center;
+}
