--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,6 @@
 .app-container {
   display: flex;
+  /* position: relative; */
 }
 
 .sidebar {
@@ -8,10 +9,44 @@
   min-width: 500px;
   max-width: 600px;
   overflow-y: auto;
-  max-height: 100vh;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .map {
   flex-grow: 2.5;
   flex-basis: 0;
+}
+
+@media (max-width: 1000px) {
+  .app-container {
+    display: block;
+    /* flex-direction: column; */
+  }
+
+  .sidebar {
+    flex-grow: 0;
+    flex-basis: auto;
+
+    min-width: auto;
+    max-width: auto;
+    /* overflow: scroll; */
+    /* overflow-y: auto; */
+
+    /* max-height: 100vh; */
+
+    margin: 0 auto;
+    /* display: none; */
+    height: auto;
+    min-height: 100vh;
+    /* height: 100vh; */
+  }
+
+  .map {
+    flex-grow: 0;
+    flex-basis: auto;
+    /* display: none; */
+  }
 }
