--- a/src/styles/forecastDay.css
+++ b/src/styles/forecastDay.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   background-color: #555972;
   border-radius: 8px;
-  padding: 5px 10px;
+  padding: 5px;
 }
 
 .date-container {
@@ -18,14 +18,42 @@
   display: flex;
   justify-content: center;
 }
+
 .weather-icon-container {
-  font-size: 40px;
   display: flex;
   align-items: center;
+  margin-left: -12px;
 }
 
 .temp-forecast-container {
   display: flex;
   flex-direction: column;
   font-size: 25px;
+}
+
+/* RESPONSIVE */
+@media (max-width: 500px) {
+  .date-container {
+    font-size: 10px;
+    margin-bottom: 3px;
+  }
+
+  .temp-forecast-container {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 400px) {
+  .weather-icon-container img {
+    width: 35px;
+    height: 35px;
+  }
+
+  .weather-icon-container {
+    margin-left: -5px;
+  }
+
+  .temp-forecast-container {
+    font-size: 16px;
+  }
 }
