--- a/src/styles/locations.css
+++ b/src/styles/locations.css
@@ -1,3 +1,9 @@
 .locations-container {
   margin-top: 50px;
 }
+
+@media (max-width: 500px) {
+  .locations-container {
+    margin-top: 30px;
+  }
+}
