--- a/src/styles/addLocation.css
+++ b/src/styles/addLocation.css
@@ -69,7 +69,7 @@ input[type='text']::placeholder {
 }
 
 .button-submit:hover {
-  background-color: #ee7402;
+  background-color: #e66f00;
 }
 
 .input-container p {
@@ -98,16 +98,16 @@ input[type='text']::placeholder {
 }
 
 .button-show-map:hover {
-  background-color: #ee7402;
+  background-color: #e66f00;
 }
 
+/* RESPONSIVE */
 @media (min-width: 1000px) {
   .button-show-map {
     display: none;
   }
 }
 
-/* Max 500px */
 @media (max-width: 500px) {
   label {
     font-size: 13px;
@@ -136,7 +136,6 @@ input[type='text']::placeholder {
   }
 }
 
-/* Max 400px */
 @media (max-width: 400px) {
   label {
     font-size: 12px;
