--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -36,10 +36,11 @@
   font-family: inherit;
   outline: none;
   cursor: pointer;
+  width: 143.63px;
 }
 
 .button-add-location:hover {
-  background-color: #ee7402;
+  background-color: #e66f00;
 }
 
 .description {
@@ -66,6 +67,7 @@
   .button-add-location {
     padding: 12px;
     font-size: 14px;
+    width: 112.38px;
   }
 
   .description {
@@ -87,6 +89,8 @@
     padding: 10px;
     font-size: 13px;
     margin-right: 0;
+    width: 78.95px;
+    height: 56px;
   }
 
   .description {
