--- a/src/styles/addLocation.css
+++ b/src/styles/addLocation.css
@@ -66,6 +66,7 @@ input[type='text']::placeholder {
   font-family: inherit;
   outline: none;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .button-submit:hover {
@@ -95,6 +96,7 @@ input[type='text']::placeholder {
   font-family: inherit;
   outline: none;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .button-show-map:hover {
