--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -37,6 +37,7 @@
   outline: none;
   cursor: pointer;
   width: 143.63px;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .button-add-location:hover {
