--- a/src/styles/location.css
+++ b/src/styles/location.css
@@ -74,6 +74,7 @@ h3 {
   outline: none;
   cursor: pointer;
   width: 68.73px;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .days-button-container button:hover {
@@ -93,6 +94,7 @@ h4 {
   cursor: pointer;
   font-size: 25px;
   transition: color 1s linear;
+  -webkit-tap-highlight-color: transparent;
 }
 
 h4 :hover {
