--- a/src/styles/mapLeaflet.css
+++ b/src/styles/mapLeaflet.css
@@ -15,7 +15,7 @@
 .map button {
   z-index: 999;
   position: absolute;
-  top: 10px;
+  top: 40px;
   right: 10px;
 
   padding: 15px;
@@ -29,6 +29,7 @@
   font-family: inherit;
   outline: none;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .map button:hover {
@@ -45,5 +46,9 @@
 @media (max-width: 1000px) {
   .map {
     position: relative;
+  }
+
+  .leaflet-control-zoom {
+    visibility: hidden;
   }
 }
